NIFI-15402 Disabled testArgumentsWithQuotesFromAttributeDynamicProperties in TestExecuteStreamCommand, placed instantiation of a TestRunner in a setUp method annotated with JUnit 5 BeforeEach and applied Intellij suggestions.