@@ -28,6 +28,7 @@ import org.apache.nifi.util.LogMessage;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
@@ -37,6 +38,12 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class TestExecuteProcess {
+    private TestRunner runner;
+
+    @BeforeEach
+    void setUp() {
+        runner = TestRunners.newTestRunner(ExecuteProcess.class);
+    }
 
     @Test
     public void testSplitArgs() {
@@ -52,7 +59,7 @@ public class TestExecuteProcess {
 
         final List<String> singleArg = ArgumentUtils.splitArgs("    hello   ", ';');
         assertEquals(1, singleArg.size());
-        assertEquals("    hello   ", singleArg.get(0));
+        assertEquals("    hello   ", singleArg.getFirst());
 
         final List<String> twoArg = ArgumentUtils.splitArgs("   hello ;   good-bye   ", ';');
         assertEquals(2, twoArg.size());
@@ -61,7 +68,7 @@ public class TestExecuteProcess {
 
         final List<String> oneUnnecessarilyQuotedArg = ArgumentUtils.splitArgs("  \"hello\" ", ';');
         assertEquals(1, oneUnnecessarilyQuotedArg.size());
-        assertEquals("  hello ", oneUnnecessarilyQuotedArg.get(0));
+        assertEquals("  hello ", oneUnnecessarilyQuotedArg.getFirst());
 
         final List<String> twoQuotedArg = ArgumentUtils.splitArgs("\"   hello\" \"good   bye\"", ' ');
         assertEquals(2, twoQuotedArg.size());
@@ -84,7 +91,6 @@ public class TestExecuteProcess {
 
     @Test
     public void testEcho() {
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setProperty(ExecuteProcess.COMMAND, "echo");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, "test-args");
         runner.setProperty(ExecuteProcess.BATCH_DURATION, "500 millis");
@@ -100,7 +106,6 @@ public class TestExecuteProcess {
 
     @Test
     public void validateProcessInterruptOnStop() throws Exception {
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setEnvironmentVariableValue("command", "ping");
         runner.setProperty(ExecuteProcess.COMMAND, "${command}");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, "nifi.apache.org");
@@ -122,7 +127,7 @@ public class TestExecuteProcess {
 
         final List<MockFlowFile> flowFiles = runner.getFlowFilesForRelationship(ExecuteProcess.REL_SUCCESS);
         if (!flowFiles.isEmpty()) {
-            assertEquals("ping", flowFiles.get(0).getAttribute("command"));
+            assertEquals("ping", flowFiles.getFirst().getAttribute("command"));
         }
     }
 
@@ -159,9 +164,7 @@ public class TestExecuteProcess {
 
         String workingDirName = "/var/test";
         String testFile = "Novo_dicionário_da_língua_portuguesa_by_Cândido_de_Figueiredo.txt";
-        // String testFile = "eclipse-java-luna-SR2-win32.zip";
 
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setProperty(ExecuteProcess.COMMAND, "cmd");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, " /c type " + testFile);
         runner.setProperty(ExecuteProcess.WORKING_DIR, workingDirName);
@@ -198,7 +201,6 @@ public class TestExecuteProcess {
 
     @Test
     public void testNotRedirectErrorStream() {
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setProperty(ExecuteProcess.COMMAND, "cd");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, "does-not-exist");
 
@@ -219,7 +221,7 @@ public class TestExecuteProcess {
         final int expectedWarningMessages = 1;
         final int maxRetry = 5;
         for (int i = 0; i < maxRetry
-            && (runner.getLogger().getWarnMessages().size() < expectedWarningMessages); i++) {
+            && (runner.getLogger().getWarnMessages().isEmpty()); i++) {
             try {
                 Thread.sleep(1000);
             } catch (InterruptedException ignored) {
@@ -235,7 +237,6 @@ public class TestExecuteProcess {
 
     @Test
     public void testRedirectErrorStream() {
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setProperty(ExecuteProcess.COMMAND, "cd");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, "does-not-exist");
         runner.setProperty(ExecuteProcess.REDIRECT_ERROR_STREAM, "true");
@@ -259,7 +260,6 @@ public class TestExecuteProcess {
 
     @Test
     public void testRedirectErrorStreamWithExpressions() {
-        final TestRunner runner = TestRunners.newTestRunner(ExecuteProcess.class);
         runner.setProperty(ExecuteProcess.COMMAND, "ls");
         runner.setProperty(ExecuteProcess.COMMAND_ARGUMENTS, "${literal('does-not-exist'):toUpper()}");
         runner.setProperty(ExecuteProcess.REDIRECT_ERROR_STREAM, "true");
@@ -279,9 +279,9 @@ public class TestExecuteProcess {
                 "the output should be sent as a content of flow-file.");
         final List<MockFlowFile> succeeded = runner.getFlowFilesForRelationship(ExecuteProcess.REL_SUCCESS);
         assertEquals(1, succeeded.size());
-        assertTrue(new String(succeeded.get(0).toByteArray()).contains("DOES-NOT-EXIST"));
-        assertEquals(succeeded.get(0).getAttribute(ExecuteProcess.ATTRIBUTE_COMMAND), "ls");
-        assertEquals(succeeded.get(0).getAttribute(ExecuteProcess.ATTRIBUTE_COMMAND_ARGS), "DOES-NOT-EXIST");
+        assertTrue(new String(succeeded.getFirst().toByteArray()).contains("DOES-NOT-EXIST"));
+        assertEquals(succeeded.getFirst().getAttribute(ExecuteProcess.ATTRIBUTE_COMMAND), "ls");
+        assertEquals(succeeded.getFirst().getAttribute(ExecuteProcess.ATTRIBUTE_COMMAND_ARGS), "DOES-NOT-EXIST");
     }
 
     /**
